--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     <div id="tree-table"></div>
 
-    <div style="position: absolute; right: 0; top: 0">
+    <div style="position: absolute; right: 16px; top: 16px">
         <label for="rowIndex">Row Index</label>
         <input type="number" id="rowIndex" value="1">
 
